tests/paczka1/fuzzy1/79974529.err
Error in line 6: CKL3kz55 A13 4D,4
Error in line 12: CKL3kz55 A513 81,35
Error in line 11: An9ToZONT S543 65,1
Error in line 9: UuODpRK S543 76,9
Error in line 18: CKL3kz55 A697 43,1
Error in line 32: OngC A13 18,7
Error in line 28: 1rvENxM3DtP S543 24,0
Error in line 30: CKL3kz55 A513 24,9
